# twitch-scraper

./: Cargo.toml  README.md
example_scripts/: stream-went-live.sh
scripts/: release-binary.sh
src/: main.rs  models.rs
